tests/NormalTests/paczka1/fuzzy1/60684214.err
Error in line 10: IJ25 S573 57,6
Error in line 13: nMuxh2ldju S337 92,2
Error in line 18: nMuxh2ldju S573 97,9
Error in line 9: Etdif A86 37,6
Error in line 22: EzBdNg S573 60,52
Error in line 26: VKIPYQ S573 52,I
Error in line 28: EzBdNg S573 -2,2
Error in line 31: EzBdNg A86 34,2
Error in line 33: EzBdNg S573 75,2
